@@ -1,3 +1,9 @@
+2016-10-07  Bernd Schmidt  <bschmidt@redhat.com>
+
+	PR c++/69733
+	* decl.c (grokdeclarator): Try to find the correct location for an
+	ignored qualifier.
+
 2016-10-07  Martin Liska  <mliska@suse.cz>
 
 	* lambda.c (maybe_add_lambda_conv_op): Set default value.
